samples/_failures_safe/1761307823_af8314_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d232a37f.c: In function ‘main’:
./samples/SAFE/__tmp_d232a37f.c:169:5: error: expected identifier or ‘(’ at end of input
  169 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_d232a37f.c:169:5: error: expected declaration or statement at end of input
